add Prototype Pattern add Prototype example add Prototype diagramm

--- a/DesignPatterns.csproj
+++ b/DesignPatterns.csproj
@@ -13,7 +13,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Resource Include="Builder\RefactoringGuru-Builder-Pattern.png" />
+	<Resource Include="Builder\RefactoringGuru-Builder-Pattern.png" />
+    <Resource Include="Prototype\RefactoringGuru-Prototype-Pattern.png" />
   </ItemGroup>
 
 </Project>
