--- a/DesignPatterns/DesignPatterns.csproj
+++ b/DesignPatterns/DesignPatterns.csproj
@@ -15,6 +15,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.9" />
+  </ItemGroup>
+
+  <ItemGroup>
 	<Resource Include="Creational Patterns\Builder\RefactoringGuru-Builder-Pattern.png" />
     <Resource Include="Creational Patterns\Prototype\RefactoringGuru-Prototype-Pattern.png" />
     <Resource Include="Structural Patterns\Adapter\RefactoringGuru-ClassAdapter.png" />
